@@ -11,7 +11,7 @@ module ActiveMerchant #:nodoc:
 
       self.supported_countries = ['IN']
       self.default_currency = 'INR'
-      self.supported_cardtypes = [:visa, :master, :american_express, :diners_club]
+      self.supported_cardtypes = [:visa, :master, :american_express, :diners_club, :maestro]
 
       self.homepage_url = 'https://www.payu.in/'
       self.display_name = 'PayU India'
@@ -135,7 +135,8 @@ module ActiveMerchant #:nodoc:
         visa: "VISA",
         master: "MAST",
         american_express: "AMEX",
-        diners_club: "DINR"
+        diners_club: "DINR",
+        maestro: "MAES"
       }
 
       def add_payment(post, payment)
